--- a/projects/gan.html
+++ b/projects/gan.html
@@ -43,19 +43,20 @@
 
           <div class="col-lg-12 portfolio-info">
             <br>
-            <h2 style="color:#12d640">Image Generator</h2>
+            <h2 style="color:#12d640">Weather Analytics Integration System</h2>
             <ul>
-              <li><strong>Tech Stack</strong>: Tensorflow, Python, numpy, keras, pandas</li>
-              <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/Generative_Model" target="_blank">Project Link</a></li>
+              <li><strong>Tech Stack</strong>:Discord API, Google Sheets API, Whatsapp</li>
+              <li><a href="https://docs.google.com/spreadsheets/d/11ovjmJ1wUDp2fK-fTxDyBGsugaghN2XSDrTVG1X72VE/edit?usp=sharinghttps://docs.google.com/spreadsheets/d/11ovjmJ1wUDp2fK-fTxDyBGsugaghN2XSDrTVG1X72VE/edit?usp=sharing">Spreadsheet Link</a></li>
             </ul>
 
             <p>
-              Developed an image generator based on Generative Adversarial Network (GAN) which aims at generating a set of realistic images (fake images which look like real) from a real dataset.            
-            </p>
+              Developed an automated system to collect and analyze weather and time data using Google Sheets, integrating real-time data visualization with dynamic chart generation.            </p>
             <p>
-              The developed system was tested on a human-face database and loss was calculated by comparing the PCAs of generated and the original image.            
+              Implemented a Discord bot to send automated updates and visualizations, ensuring seamless communication of data between the APIs within a dedicated channel.            </p>
+            <p>
+              NOTE : The Spreadsheet entries are automated via the API  
             </p>
-          </div>
+            </div>
 
         </div>
 
