--- a/projects/nasa.html
+++ b/projects/nasa.html
@@ -2,7 +2,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
   
-    <title>Movie Recommender</title>
+    <title>Image Generator</title>
     <meta content="" name="descriptison">
     <meta content="" name="keywords">
   
@@ -43,18 +43,16 @@
   
             <div class="col-lg-12 portfolio-info">
               <br>
-              <h2 style="color:#12d640">Music Streaming Website</h2>
+              <h2 style="color:#12d640">Solar System Simulator</h2>
               <ul>
-                <li><strong>Tech Stack</strong>: Django, HTML, CSS, Bootstrap, AWS S3, Heroku</li>
-                <li><strong>Website URL</strong>: <a href="https://galvanic-music.herokuapp.com/" target="_blank">Link</a></li>
-                <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/MusicPlayer" target="_blank">Project Link</a></li>
+                <li><strong>Tech Stack</strong>: Python, PyGame </li>
+                <li><strong>Github URL</strong>: <a href="https://github.com/yossev/solar-system-simulator" target="_blank">Project Link</a></li>
               </ul>
-  
               <p>
-                Django based music streaming website.             
+                Created a solar system visualizer in Python, Allowing users to explore celestial bodies and orbits.
               </p>
               <p>
-                User can register/login to the web app, play song, view detailed information of song, search song based on filters such as language and singers, create playlist, add/remove songs to/from playlist, add/remove songs to/from favourites, explore recently played songs.              
+                Used NASA's Provided Mathematical formulas and Data 
               </p>
             </div>
   
