--- a/projects/pomodoro.html
+++ b/projects/pomodoro.html
@@ -2,7 +2,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
   
-    <title>Image Generator</title>
+    <title>Movie Recommender</title>
     <meta content="" name="descriptison">
     <meta content="" name="keywords">
   
@@ -43,22 +43,20 @@
   
             <div class="col-lg-12 portfolio-info">
               <br>
-              <h2 style="color:#12d640">Image Generator</h2>
+              <h2 style="color:#12d640">PomoKitty - Pomodoro Web application with Custom Features (React.js) - 2023</h2>
               <ul>
-                <li><strong>Tech Stack</strong>: TJava, NodeJS, Python, HTML, CSS, Javascript, AWS(S3, EC2, SQS)</li>
-                <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/image_recognition_as_a_service" target="_blank">Project Link</a></li>
+                <li><strong>Tech Stack</strong>: HTML, Bootstrap CSS, ReactJS</li>
+                <li><strong>Website URL</strong>: <a href="https://pomokitty.vercel.app/" target="_blank">Link</a></li>
+                <li><strong>Github URL</strong>: <a href="https://github.com/yossev/PomoKitty" target="_blank">Project Link</a></li>
               </ul>
-  
               <p>
-                Built an elastic web application that automatically scales in and scales out 20 EC2 instances based on the traffic of current users with the help of AWS services. Created custom AMIs to deploy image recognition app on EC2 instance; used SQS to handle request and response.              </p>
+                Created a Pomodoro timer website using ReactJS, enhancing productivity with customizable timer durations and session tracking. 
               </p>
               <p>
-                Deployed image recognition system on AWS for the clients to access and successfully tested the application by generating 1000 requests.              </p>
+                Implemented customizable timer durations, notifications, and session tracking, bolstering task efficiency and user flexibility, complemented with Spotify Embed API integration.
               </p>
             </div>
-  
           </div>
-  
         </div>
       </div><!-- End Portfolio Details -->
     </main><!-- End #main -->
