--- a/projects/resume.html
+++ b/projects/resume.html
@@ -43,15 +43,18 @@
 
           <div class="col-lg-12 portfolio-info">
             <br>
-            <h2 style="color:#12d640">Resume Section Classifier</h2>
+            <h2 style="color:#12d640">IMG to ASCII Convertor using C++/OpenCV</h2>
 
             <ul>
-              <li><strong>Tech Stack</strong>: Python, scikit-learn, numpy, pandas</li>
-              <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/ResumeSectionClassifier" target="_blank">Project Link</a></li>
+              <li><strong>Tech Stack</strong>: C++, OpenCV</li>
+              <li><strong>Github URL</strong>: <a href="https://github.com/yossev/IMG-TO-ASCII" target="_blank">Project Link</a></li>
             </ul>
 
             <p>
-              Given the Resume of a person, detect the section words such as experience, skills, projects, etc. Implemented different machine learning algorithms to get the desired output.            
+              Utilized C++ and OpenCV to create an IMG to ASCII Converter
+            </p>
+            <p>
+              Employed grayscale image intensity for accurate and visually appealing ASCII representations. 
             </p>
           </div>
 
