--- a/projects/vdg.html
+++ b/projects/vdg.html
@@ -43,14 +43,17 @@
 
           <div class="col-lg-12 portfolio-info">
             <br>
-            <h2 style="color:#12d640">Video Description Generator</h2>
+            <h2 style="color:#12d640"> Porsche Spin-off website - ( MERN Stack )</h2>
 
             <ul>
-              <li><strong>Tech Stack</strong>: Tensorflow, NLTK, Keras, Python, Opencv</li>
+              <li><strong>Tech Stack</strong>: MERN Stack, JWT Authentication</li>
+              <li><strong>Github URL</strong>: <a href="https://github.com/abdelrahman-anasr/Porsche-Website" target="_blank">Project Link</a></li>
             </ul>
-
             <p>
-              Project aims at generating a description of a given video. The steps include Object detection in video frames using Convolutional Neural Network followed by generating text for each frame using a recurrent neural network and thereby generating tags with the help of natural language processing.            
+              Developed a dynamic Porsche Spin-off website using the MERN Stack, implementing APIs from scratch and utilizing JWT authentication for secure user data management.
+            </p>
+            <p>
+              Coordinated tasks, timelines, and resources within a student team, resulting in a seamless and successful project outcome
             </p>
           </div>
 
