--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
               <ul style="text-align:left;color:#fff;">
                 <li>Distributed Systems</li>
                 <li>Software Engineering</li>
-                <li>Opearting Systems</li>
+                <li>Operating Systems</li>
                 <li>Data Structers and Algorithms</li>
               </ul>
             </div>
